Nicer water and light tweaks, remove node button now correctly visible

--- a/src/app/lore/component/timeline/block.component.scss
+++ b/src/app/lore/component/timeline/block.component.scss
@@ -23,6 +23,8 @@
 		cursor: pointer;
 		z-index: 250;
 		display: inherit;
+		left: 10px;
+
 	}
 }
 
