--- a/src/app/lore/component/timeline/block.component.theme.scss
+++ b/src/app/lore/component/timeline/block.component.theme.scss
@@ -14,6 +14,7 @@
 
 		.remove {
 			color: mat-color($primary, 'lighter');
+			background-color: rgba(mat-color($primary, 'darker'), 0.8);
 		}
 	}
 }
